--- a/css/styles.css
+++ b/css/styles.css
@@ -854,6 +854,8 @@ body {
   left: 12px;
   top: 50%;
   transform: translateY(-50%);
+  fill: #212121;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-input {
@@ -922,6 +924,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .check-icon {
